--- a/docs/src/scss/_portfolio.scss
+++ b/docs/src/scss/_portfolio.scss
@@ -35,11 +35,85 @@
     }
 
     .lst_items {
-        li {
+        > li {
             display: none;
+            justify-content: space-evenly;
+            margin: 60px 0 0;
 
             &.active {
-                display: block;
+                display: flex;
+            }
+
+            .project {
+                width: calc(99% / 3);
+                background-color: rgb($dark-grey-alt);
+                padding: 20px;
+
+                &__thumb {
+                    line-height: 0;
+
+                    img {
+                        max-width: 100%;
+                    }
+                }
+
+                &__title {
+                    display: block;
+                    font-size: 22px;
+                    font-weight: 300;
+                    font-style: italic;
+                    text-align: center;
+                    margin: 20px 0 15px;
+
+                    b {
+                        font-style: normal;
+                        font-weight: 600;
+                        color: rgba(255, 255, 255, 1);
+
+                        &::after {
+                            content: ":";
+                        }
+                    }
+                }
+
+                &__stacks {
+                    display: flex;
+                    justify-content: center;
+                    flex-wrap: wrap;
+                    
+                    li {
+                        font-style: italic;
+                        font-size: 14px;
+                        background-color: rgba(255, 255, 255, .1);
+                        padding: 5px 15px;
+                        border-radius: 4px;
+                        text-transform: uppercase;
+                        margin: 5px;
+                    }
+                }
+
+                &__links {
+                    display: flex;
+                    justify-content: center;
+                    margin: 30px 0 0;
+
+                    a {
+                        background-color: rgba($blue, .8);
+                        border: 0;
+                        border-radius: 4px;
+                        cursor: pointer;
+                        display: inline-block;
+                        font-style: italic;
+                        font-weight: 400;
+                        padding: 10px 20px;
+                        transition: .3s;
+                        margin: 0 10px;
+
+                        &:hover {
+                            background-color: rgba($blue, 1);
+                        }
+                    }
+                }
             }
         }
     }
